# browser-witch

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: config.toml  main.rs
