[package]
name = "browser-witch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
eframe = { version = "0.31.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
systemd-journal-logger = "2.2"
toml = "0.7"
